--- a/_posts/2019-12-26-the-us-narrative-today.html
+++ b/_posts/2019-12-26-the-us-narrative-today.html
@@ -1768,5 +1768,108 @@ stories:
   state: Michigan
   domain: http://www.gladwinmi.com/
   link: https://www.gladwinmi.com/community/hospice-of-gladwin-area-welcomes-new-board-member/article_dd437576-25aa-11ea-97fb-1f50d55ec38c.html
+images:
+- name: trucksilo-trucksilo-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-satan-red.jpg
+- name: bf-skinner-construction-crane-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-construction-crane-city.jpg
+- name: oldhotel-oldhotel-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-bright-sand.jpg
+- name: blossombar-purple-pond-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-50-62.jpg
+- name: rockingchair-rockingchair-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-brush.jpg
+- name: windowmountain-window-mountain-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-cinnamon-rolls.jpg
+- name: windowmountain-window-mountain-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kandinsky-bv.jpg
+- name: fence-mexico-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-sunday.jpg
+- name: ellis-island-ellis-island-room-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gan-vogh.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
+- name: death-valley-death-valley-national-park-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-pablo-blue.jpg
+- name: oldhouse-oldhouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-crabapple.jpg
+- name: razorcliff-razorcliff-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purp-paper.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-crabapple.jpg
+- name: aws-s3-stories-dragon-close-up-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dragon-close-up-clean-view.jpg
+- name: fence-mexico-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-spagetti-accident.jpg
+- name: razorwire-DSC-0080-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purp-paper.jpg
+- name: aws-s3-stories-status-berlin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-status-berlin-dark-dali.jpg
+- name: legal-statue-legalstatue-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-circuit.jpg
+- name: oldroad-old-road-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-matrix.jpg
+- name: machine-road-machine-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-umberto-bocc.jpg
+- name: old-door-lock-old-door-lock-2-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-spagetti-accident.jpg
+- name: subway-subway-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-pablo-blue.jpg
+- name: old-school-house-old-schoolhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-electricity.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
+- name: pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
+- name: rain-princess-P9180036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P9180036.jpg
+- name: oldhotel-oldhotel-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-aqua.jpg
+- name: powerlines-power-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-constitution.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-colored-circuits.jpg
+- name: bf-skinner-statue-of-liberty-back.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-of-liberty-back.jpg
+- name: aws-s3-stories-copper-servers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-copper-servers.jpg
+- name: stalin-time-british-guards-marching.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-british-guards-marching.jpg
+- name: old-granary-field-granaryfield-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-sunday.jpg
+- name: eduardo-eduardo-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-purp-paper.jpg
+- name: old-church-oldchurch-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gan-vogh.jpg
+- name: store-on-corner-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-constitution.jpg
+- name: stories-new-dragon-shadows-black-white-outline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-dragon-shadows-black-white-outline.jpg
+- name: oldhouse-oldhouse-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-rain.jpg
+- name: statue-of-liberty-front-view-statueofliberty-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-crabapple.jpg
+- name: nazi-invasion-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-lawn-view.jpg
+- name: adam-smith-adam-smith-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-brush.jpg
+- name: victoria-victoria-corner-hotel-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-blue-brush.jpg
+- name: power-lines-power-lines-empty-space-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-missle.jpg
+- name: window-window-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-clean-view.jpg
+- name: statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
+- name: stalin-time-white-house-west-wing-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-white-house-west-wing-view.jpg
+- name: copper-circuit-old-house_36681740046_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-house_36681740046_o.jpg
+- name: braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-los-angeles-downtown-from-afar.jpg
+- name: berlinwall-DSC-0084-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-emily-carr.jpg
+- name: crow-crow-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-constitution.jpg
 ---
 Sudan's Christians Enjoy Holiday Amid Hope For New Freedoms.&nbsp;Dearborn's Most Wanted Car Thief Is Awaiting Trial.&nbsp;Temporary Interim State Attorney To Be Sworn In Monday.&nbsp;Knitting Group In Vermilion Brings Joy To Members For Over A Decade.&nbsp;Tinkerbash Expects To Triple The Fun.&nbsp;Another Vanguard Year For The Arts.&nbsp;Firefighters Stuff Some Stockings.&nbsp;TriLinc Global Impact Fund Makes Impact Investments In Africa.&nbsp;
